--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -31,3 +31,35 @@ a {
     border-bottom: 1px solid rgb(8, 93, 252) !important;
     box-shadow: 0 1px 0 0 rgb(8, 93, 252)  !important;
 }
+
+.gallery{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.item{
+    width: 30%;
+}
+
+.home-card{
+    max-width: 500px;
+    height: max-content;
+    margin: 26px auto;
+
+}
+.collection-item{
+    width: 100%;
+}
+
+
+#toast-container{
+    top:30px !important;
+    right: 20px !important;
+    left: auto !important;
+}
+
+
+.material-icons:hover{
+    cursor: pointer;
+}
