--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,65 +1,61 @@
 @import url('https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap');
 
-a {
-    color: black !important;
+a{
+  color: black !important;
 }
 
-.brand-logo {
-    margin-left: 2vh;
-    font-family: 'Grand Hotel', cursive;
-}
-
-.hotelfont {
-    font-family: 'Grand Hotel', cursive;
+.brand-logo,h2{
+  font-family: 'Grand Hotel', cursive;
+  margin-left: 10px;
 }
 
 .mycard{
-    margin-top: 30px;
+  margin-top: 30px;
 }
 .auth-card{
-    padding: 20px;
-    text-align: center;
-    max-width: 400px;
-    margin: 10px auto;
+  padding: 20px;
+  text-align: center;
+  max-width: 400px;
+  margin: 10px auto;
 }
 
 .input-field input[type=text]:focus {
-    border-bottom: 1px solid rgb(8, 93, 252) !important;
-    box-shadow: 0 1px 0 0 rgb(8, 93, 252)  !important;
+  border-bottom: 1px solid rgb(8, 93, 252) !important;
+  box-shadow: 0 1px 0 0 rgb(8, 93, 252)  !important;
 }
 .input-field input[type=password]:focus {
-    border-bottom: 1px solid rgb(8, 93, 252) !important;
-    box-shadow: 0 1px 0 0 rgb(8, 93, 252)  !important;
+  border-bottom: 1px solid rgb(8, 93, 252) !important;
+  box-shadow: 0 1px 0 0 rgb(8, 93, 252)  !important;
 }
 
 .gallery{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .item{
-    width: 30%;
+  width: 30%;
 }
 
 .home-card{
-    max-width: 500px;
-    height: max-content;
-    margin: 26px auto;
-
+  max-width: 500px;
+  height: max-content;
+  margin: 26px auto;
+  
 }
 .collection-item{
-    width: 100%;
+  width: 100%;
 }
 
 
 #toast-container{
-    top:60px !important;
-    right: 20px !important;
-    left: auto !important;
+  top:30px !important;
+  right: 20px !important;
+  left: auto !important;
 }
 
 
 .material-icons:hover{
-    cursor: pointer;
+  cursor: pointer;
 }
